--- a/CSS.css
+++ b/CSS.css
@@ -1,6 +1,9 @@
 body{
-	background-color:lightcoral;
-	color: green;
-	
-	
+	background-color:#246068;
+	color: white;
 }
+
+.cssgridview {width:auto; margin:5px 0 10px 0; border:solid 1px #525252; border-collapse:collapse; text-align:center; font-family:"Helvetica"; color: white;
+.cssgridview td {padding:10px; border: solid 1px #c1c1c1; color: #717171; }
+.cssgridview th{ padding:10px; color #fff; background #424242 ur)}
+.cssgridview .alt {background-color:aqua;}
